# model-clock

./: .gitignore  CMakeLists.txt  DEVELOPER.md  README.md  context.ps1
main/: CMakeLists.txt  Kconfig.projbuild  button_driver.c  button_driver.h  event_handler.c  event_handler.h  lcd_driver.c  lcd_driver.h  led_driver.c  led_driver.h  main.c  output_driver.c  output_driver.h  state_machine.c  state_machine.h  storage.c  storage.h  timer.c  timer.h
main/menu/: edit_commons.c  edit_datetime.c  edit_timescale.c  menu.c  menu.h  menu_table.c  menu_table.h
